--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 main {
   width: 100vw;
   height: 80vh;
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   justify-content: center;
-  align-items: center;
 }
 
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Shadows Into Light', cursive;
 }
