--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@ main {
   height: 80vh;
   /* display: flex;
   flex-direction: column; */
-  justify-content: center;
+  justify-content: center; 
+  font-family: 'Dancing Script', cursive;
 }
 
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Shadows Into Light', cursive;
+}
+
+.App{
+ 
 }
