--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,9 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.App {
+  background-image: url('./images/bg1.jpg');
+  background-size: cover;
+  background-position-y: bottom;
+}
