--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,9 @@ main {
   font-family: 'Dancing Script', cursive;
 }
 
-body {
-  padding: 0;
-  margin: 0;
-}
-
 .App {
+  width: 100vw;
+  height: 100vh;
   background-image: url('./images/bg1.jpg');
   background-size: cover;
   background-position-y: bottom;
