--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 main {
-  width: 100vw;
-  height: 80vh;
   /* display: flex;
   flex-direction: column; */
   justify-content: center; 
   font-family: 'Dancing Script', cursive;
 }
 
-.App {
+body {
   width: 100vw;
   height: 100vh;
   background-image: url('./images/bg1.jpg');
